@@ -1,3 +1,7 @@
+2009-08-11 Serdar Dalgıç <dalgic.srdr@gmail.com>
+		* (cli/build.py): pisi build command now works in debug mode unless -q
+		or --quiet parameter is passed.
+
 2009-08-07 Ozan Çağlayan <ozan@pardus.org.tr>
 		* (utils.py): Strip kernel and modules as well as other binaries to build
 		dbginfo packages for them.
